After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681757 - grilo-tests / pointer from int
grilo-tests / pointer from int
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-13 12:47 UTC by Dominique Leuenberger
Modified: 2012-08-13 17:56 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dominique Leuenberger 2012-08-13 12:47:59 UTC
While building grilo 0.2 release on the openSUSE Build Service, the build root check at the end raised this error:

E: grilo 64bit-portability-issue grilo-test.c:246, 247, 248

The error is raised based on compiler warnings, which are known to have ill effects, in this case:

grilo-test.c: In function 'simple_playlist_search':
grilo-test.c:246:9: warning: assignment makes pointer from integer without a cast [enabled by default]
grilo-test.c:247:9: warning: assignment makes pointer from integer without a cast [enabled by default]
grilo-test.c:248:9: warning: assignment makes pointer from integer without a cast [enabled by default]

Looking at the built .c file, the issue is rather clear (not the fix though, as it comes from vala code):

[...]
        GParamSpec* _tmp0_;
        GParamSpec* _tmp1_;
        GParamSpec* _tmp2_;
[...]
        _tmp0_ = GRL_METADATA_KEY_ID;
        _tmp1_ = GRL_METADATA_KEY_TITLE;
        _tmp2_ = GRL_METADATA_KEY_URL;


So, we do assign an int (GRL_METADATA_KEY_ID == 15) to a pointer...
Comment 1 Juan A. Suarez Romero 2012-08-13 15:40:09 UTC
commit 7eb773f221c2ab2f772f770ed560621782e8b52a
Author: Juan A. Suarez Romero <jasuarez@igalia.com>
Date:   Mon Aug 13 15:18:05 2012 +0200

    core: GrlKeyID are not GParamSpec
    
    This fixes https://bugzilla.gnome.org/show_bug.cgi?id=681757

 bindings/vala/grilo-0.2-custom.vala      |   92 ++++++++++++++++++++++++++++++++++++++++++++++++------------------------
 bindings/vala/grilo-uninstalled.files.in |    2 +-
 src/grl-metadata-key.c                   |    3 ---
 src/grl-source.c                         |    2 +-
 tools/vala/grilo-test.vala               |    2 +-
 5 files changed, 64 insertions(+), 37 deletions(-)
Comment 2 Dominique Leuenberger 2012-08-13 16:42:47 UTC
Juan,

Did you push this to git.gnome.org? I seem not to be able to find the commit :(
Comment 3 Juan A. Suarez Romero 2012-08-13 17:56:14 UTC
Ops!

Forgive me, I've pushed now.