core: GrlKeyID are not GParamSpec

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=681757