src/grl-metadata-key.c
@@ -25,9 +25,6 @@
  * @short_description: General media key definition
  *
  * This is the list of defined keys in grilo for media entries.
- *
- * Each key is a #GParamSpec which can hold the information extracted
- * from the remote database.
  */
 
 #include "grl-metadata-key.h"
